<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.ub.pis2016.martinperezyarza.divises.vista.OptionsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/txtEuroConstant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtOptions1"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editFactor1"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/txtDollarConstant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtOptions2"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/editFactor2"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/txtComision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtComision" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/editComision"
                android:text="@string/editComision" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/btnReiniciarFactor1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnReiniciarFactor1"
                android:layout_weight="1" />

            <Button
                android:text="@string/btnReiniciarFactor2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnReiniciarFactor2"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:text="@string/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnGuardar"
            android:layout_weight="1" />

    </LinearLayout>
</RelativeLayout>
