<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >


    <TextView
        android:text="@string/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitle"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:id="@+id/txtEdit"
                android:text="@string/init"
                android:textSize="24sp"
                android:layout_weight="0"
            android:layout_below="@+id/txtTitle"
            android:layout_alignParentStart="false" />

        <TextView
                android:text="@string/unitOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtUnit"
                android:layout_weight="0"
                android:textSize="24sp"
            android:layout_alignBaseline="@+id/txtEdit"
            android:layout_alignBottom="@+id/txtEdit"
            android:layout_toEndOf="@+id/txtEdit" />

    </LinearLayout>

    <View
            android:background="@android:color/darker_gray"
            android:textAlignment="center"
        android:layout_height="2dp"
        android:layout_weight="0"
        android:layout_alignTop="@+id/switchMoneda"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="140dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/init"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtConverted"
            android:layout_weight="1"
            android:textSize="36sp"
            android:textAlignment="textEnd"
            android:layout_above="@+id/btnConverter"
            android:layout_toEndOf="@+id/txtEdit"
            android:layout_marginLeft="120dp" />

        <TextView
        android:text="@string/unitTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtUnitConverted"
        android:layout_weight="1"
        android:textSize="36sp"
            android:layout_above="@+id/btnConverter"
            android:layout_toEndOf="@+id/txtEdit"
            android:layout_marginBottom="11dp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/btnConvertir"
        android:onClick="cambiarTexto()"
        android:id="@+id/btnConverter"
        android:layout_above="@+id/btnOptions"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:text="@string/toDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switchMoneda"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_alignTop="@+id/btnOptions"
            android:layout_toEndOf="@+id/btnOptions"
            android:checked="false" />

        <Button
            android:text="@string/btnOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnOptions"
            android:layout_weight="1"
            android:layout_alignParentBottom="false"
            android:layout_toEndOf="@+id/txtEdit"
            android:onClick="enterOptions (MainActivity)" />

    </LinearLayout>

</LinearLayout>





